docs: 优化字符串与注解文档结构，补充技术细节与示例说明